@@ -1695,7 +1695,7 @@
     "iconIndex": 236,
     "itypeId": 3,
     "name": "CASTLE FORGE RECIPES",
-    "note": "Was once the Pot with Seed.\n<Item Recipe: 176, 184, 68, 74, 76, 92, 93, 154>\n<Weapon Recipe: 42, 43, 45, 49, 50, 44, 23, 30, 24, 25, 26, 27, 21, 22>\n<Armor Recipe: 125, 126, 127, 128, 151, 150, 129, 130, 131, 132, 133, 97, 117, 136, 137, 108, 115, 118, 107, 149, 148, 142, 143, 134, 32, 57, 124, 81, 82, 83, 47, 48, 78, 44, 113, 46, 45, 96, 36, 37>",
+    "note": "Was once the Pot with Seed.\n<Item Recipe: 176, 184, 207, 68, 74, 76, 92, 93, 154>\n<Weapon Recipe: 42, 43, 45, 49, 50, 44, 23, 30, 24, 25, 26, 27, 21, 22>\n<Armor Recipe: 125, 126, 127, 128, 151, 150, 129, 130, 131, 132, 133, 97, 117, 136, 137, 108, 115, 118, 107, 149, 148, 142, 143, 134, 32, 57, 124, 81, 82, 83, 47, 48, 78, 44, 113, 46, 45, 96, 36, 37>",
     "occasion": 3,
     "price": 0,
     "repeats": 1,
@@ -5961,6 +5961,32 @@
     "price": 20,
     "repeats": 1,
     "scope": 7,
+    "speed": 0,
+    "successRate": 100,
+    "tpGain": 0
+  },
+  {
+    "id": 207,
+    "animationId": 0,
+    "consumable": false,
+    "damage": {
+      "critical": false,
+      "elementId": 0,
+      "formula": "0",
+      "type": 0,
+      "variance": 20
+    },
+    "description": "A high(er)-tech salvage kit that allows for the\ndisassembling of more complex items and equipment.",
+    "effects": [],
+    "hitType": 0,
+    "iconIndex": 689,
+    "itypeId": 2,
+    "name": "Advanced Salvage Kit",
+    "note": "<Disassembler: Advanced>\n\n<Synthesis Ingredients>\nPetrified Wood: 20\nWeb Ball: 10\nFeral Bat Wing: 10\nTurtle Scute: 2\nSteel Alloy: 2\nBronze Alloy: 1\n</Synthesis Ingredients>\n<Mask Name: Stronger Salvager>\n<Synthesis SE: Equip3>",
+    "occasion": 3,
+    "price": 50,
+    "repeats": 1,
+    "scope": 0,
     "speed": 0,
     "successRate": 100,
     "tpGain": 0
