@@ -1327,7 +1327,7 @@
     ],
     "iconIndex": 622,
     "name": "Life Crystal Staff",
-    "note": "<Upgrade Slots: 2>\n<Weapon Image: 110>\n<HP Life Steal Physical: +12.5%>\n<HP Life Steal Magical: +5%>\n<Equip Requirement>\nclass: Cleric\n</Equip Requirement>\n\n<Synthesis Ingredients>\nVoid Crystal Staff\nLife Orb\nEnchanting Crystal\n</Synthesis Ingredients>\n<Mask Name: For HP-Focused Clerics>\n\n<Disassemble Pool: Basic>\nx1 Void Crystal Staff: 100%\nx1 Life Orb: 100%\n</Disassemble Pool: Basic>",
+    "note": "<Upgrade Slots: 2>\n<Weapon Image: 110>\n<HP Life Steal Physical: +12.5%>\n<HP Life Steal Magical: +5%>\n<Equip Requirement>\nclass: Cleric\n</Equip Requirement>\n\n<Synthesis Ingredients>\nVoid Crystal Staff\nLife Orb\nEnchanting Crystal\n</Synthesis Ingredients>\n<Mask Name: For HP-Focused Clerics>\n\n<Disassemble Pool: Advanced>\nx1 Void Crystal Staff: 100%\nx1 Life Orb: 100%\n</Disassemble Pool: Advanced>",
     "params": [
       0,
       20,
@@ -1360,7 +1360,7 @@
     ],
     "iconIndex": 423,
     "name": "Mana Crystal Staff",
-    "note": "<Upgrade Slots: 2>\n<Weapon Image: 109>\n<Equip Requirement>\nclass: Cleric\n</Equip Requirement>\n<MP Life Steal Physical: +15%>\n\n<Synthesis Ingredients>\nVoid Crystal Staff\nMana Orb\nEnchanting Crystal\n</Synthesis Ingredients>\n<Mask Name: For MP-Focused Clerics>\n\n<Disassemble Pool: Basic>\nx1 Void Crystal Staff: 100%\nx1 Mana Orb: 100%\n</Disassemble Pool: Basic>",
+    "note": "<Upgrade Slots: 2>\n<Weapon Image: 109>\n<Equip Requirement>\nclass: Cleric\n</Equip Requirement>\n<MP Life Steal Physical: +15%>\n\n<Synthesis Ingredients>\nVoid Crystal Staff\nMana Orb\nEnchanting Crystal\n</Synthesis Ingredients>\n<Mask Name: For MP-Focused Clerics>\n\n<Disassemble Pool: Advanced>\nx1 Void Crystal Staff: 100%\nx1 Mana Orb: 100%\n</Disassemble Pool: Advanced>",
     "params": [
       0,
       20,
