@@ -74,7 +74,8 @@ Additions:
    > MRG Scroll
    > EXR Scroll
    > MCR Scroll
-  ~ 6 miscellaneous items:
+  ~ 8 miscellaneous items:
+   > Advanced Salvage Kit
    > Golden Tablet Piece (Left)
    > Golden Tablet Piece (Right)
    > Golden Tablet
